fix other wrap

--- a/src/app/exams/exams-view.scss
+++ b/src/app/exams/exams-view.scss
@@ -84,7 +84,7 @@
     display: flex;
     align-items: center;
     gap: 8px;
-    flex: 1 1 100%;
+    flex: 1 1 auto;
     min-width: 0;
   }
 
